--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -25,5 +25,7 @@ jobs:
                      python -m pip install --upgrade pip
                      pip install pytest
 
-               - name: Rodar Testes
-                 run: pytest -v
+               - name: Executar Testes
+                 run: |
+                     export PYTHONPATH=$PYTHONPATH:$(pwd)/src
+                     pytest -v
